; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/extr_padlock-aes.c_padlock_aes_encrypt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/extr_padlock-aes.c_padlock_aes_encrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_tfm = type { i32 }
%struct.aes_ctx = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.crypto_tfm*, i32*, i32*)* @padlock_aes_encrypt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @padlock_aes_encrypt(%struct.crypto_tfm* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.crypto_tfm*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.aes_ctx*, align 8
  store %struct.crypto_tfm* %0, %struct.crypto_tfm** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load %struct.crypto_tfm*, %struct.crypto_tfm** %4, align 8
  %9 = call %struct.aes_ctx* @aes_ctx(%struct.crypto_tfm* %8)
  store %struct.aes_ctx* %9, %struct.aes_ctx** %7, align 8
  %10 = load %struct.aes_ctx*, %struct.aes_ctx** %7, align 8
  %11 = getelementptr inbounds %struct.aes_ctx, %struct.aes_ctx* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = call i32 @padlock_reset_key(i32* %12)
  %14 = load i32*, i32** %6, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = load %struct.aes_ctx*, %struct.aes_ctx** %7, align 8
  %17 = getelementptr inbounds %struct.aes_ctx, %struct.aes_ctx* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.aes_ctx*, %struct.aes_ctx** %7, align 8
  %20 = getelementptr inbounds %struct.aes_ctx, %struct.aes_ctx* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = call i32 @ecb_crypt(i32* %14, i32* %15, i32 %18, i32* %21, i32 1)
  %23 = load %struct.aes_ctx*, %struct.aes_ctx** %7, align 8
  %24 = getelementptr inbounds %struct.aes_ctx, %struct.aes_ctx* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = call i32 @padlock_store_cword(i32* %25)
  ret void
}

declare dso_local %struct.aes_ctx* @aes_ctx(%struct.crypto_tfm*) #1

declare dso_local i32 @padlock_reset_key(i32*) #1

declare dso_local i32 @ecb_crypt(i32*, i32*, i32, i32*, i32) #1

declare dso_local i32 @padlock_store_cword(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
